--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,11 @@ on:
 
 env:
   WORKFLOW_VARIABLE: WORKFLOW
+
 jobs:
-  build:
-    runs-on: "ubuntu-org"
-    strategy:
-      matrix:
-        node-version: [14.x]
+
+  job1:
+    runs-on: ubuntu-org
     steps:
       - name: "checkout"
         uses: actions/checkout@v2
