--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -5,7 +5,8 @@ on:
   issues:
     types: [opened, closed, reopened]
 jobs:
-  payloadprintjob:    
+  payloadprintjob:
+    if: contains(github.event.issue.labels.*.name, 'gearid-1234')
     name: Print event
     runs-on: [ubuntu-org,ubuntu-org4]
     steps:
