--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -28,7 +28,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ SECRETS.GIT_PER_TOKEN }}
     - name: "Check if the ADM team approved the release"
-      if: "${{fromJson(steps.get_adm_issue.outputs.data).[0].state == 'open'}}"
+      if: "${{toJson(steps.get_adm_issue.outputs.data[0].state) == 'open'}}"
       run: |
         echo "Release Approved by ADM team " 
     - run: "echo latest release: '${{ steps.get_adm_issue.outputs.data }}'"
