--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -13,11 +13,11 @@ jobs:
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{toJson(github)}}
+        issuelabels: "${{ join(github.event.issue.labels.*.name,',') }}"
       run: |
         echo " this is the issue action ${{ github.event.action }}" 
         echo "this is the issue lable ${{ join(github.event.issue.labels.*.name,';') }}"
-        env:
-          issuelabels: "${{ join(github.event.issue.labels.*.name,';') }}"
+          
     - uses: octokit/request-action@v2.x
       id: get_adm_issue_status
       with:
