--- a/.github/workflows/octkittest.yml
+++ b/.github/workflows/octkittest.yml
@@ -19,12 +19,12 @@ jobs:
       env:
         labels: "gearid-1234,chg"
       run: |
-        echo " this is the issue action ${{ env.issuelabels }}" 
+        echo " this is the issue action ${{ env.labels }}" 
           
     - uses: octokit/request-action@v2.x
       id: get_adm_issue_status
       with:
-        route: GET "/repos/imurpalvicky-org/compliance-team/issues/?labels={labels}"
+        route: GET "/repos/imurpalvicky-org/compliance-team/issues"
         labels: ${{env.labels}}
       env:
         GITHUB_TOKEN: ${{ SECRETS.GIT_PER_TOKEN }}
