--- a/.github/workflows/octkittest.yml
+++ b/.github/workflows/octkittest.yml
@@ -24,8 +24,9 @@ jobs:
     - uses: octokit/request-action@v2.x
       id: get_adm_issue_status
       with:
-        route: GET "/repos/imurpalvicky-org/compliance-team/issues"
-        labels: ${{env.labels}}
+        route: GET /repos/{owner}/{repo}/issues
+        repo: 'compliance-team'
+        owner: 'imurpalvicky-org'
       env:
         GITHUB_TOKEN: ${{ SECRETS.GIT_PER_TOKEN }}
         
