--- a/.github/workflows/octkittest.yml
+++ b/.github/workflows/octkittest.yml
@@ -20,14 +20,16 @@ jobs:
         labels: "gearid-1234,CHG454"
       run: |
         echo " this is the issue action ${{ env.labels }}" 
-          
+    - name: print env
+      run: |
+        echo " this is the issue action ${{ env.labels }}"           
     - uses: octokit/request-action@v2.x
       id: get_adm_issue_status
       with:
         route: GET /repos/{owner}/{repo}/issues
         repo: 'compliance-team'
         owner: 'imurpalvicky-org'
-        labels: ${{env.labels}}
+        labels: ${{ env.labels }}
       env:
         GITHUB_TOKEN: ${{ SECRETS.GIT_PER_TOKEN }}
         
