--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -31,3 +31,4 @@ jobs:
       run: |
         echo "Release Approved by ADM team " 
     - run: "echo latest release: '${{ steps.get_adm_issue.outputs.data }}'"
+    - run: "echo latest release: '${{ fromJson(steps.get_adm_issue.outputs.data[0]).state }}'"
