--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -31,11 +31,11 @@ jobs:
         GITHUB_TOKEN: ${{ SECRETS.GIT_PER_TOKEN }}
         
     - name: "verify ADM Approval"
-      if: ${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state}} == 'closed'}}
+      if: ${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state == 'closed'}} 
       run: |
         echo "Release Approved by ADM team as ${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state}}" 
     - name: "verify ADM Approval"
-      if: ${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state}} != 'closed'}}
+      if: ${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state != 'closed'}}
       run: |
         echo "Release disapproved by ADM team as ${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state}}" 
         exit 1
