--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -27,6 +27,7 @@ jobs:
         repo: 'compliance-team'
         owner: 'imurpalvicky-org'
         labels: ${{ env.labels }}
+        state: "all"
       env:
         GITHUB_TOKEN: ${{ SECRETS.GIT_PER_TOKEN }}
         
