--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -47,3 +47,5 @@ jobs:
       - name: "Jenkins deployment Job"
         run: |
           echo "Run Jenkins job and wait for two hours "
+          SUMMARY=$'# Job Summary\n## Jenkins job and wait for two hours for completion  \nsuccessful'
+          echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
