--- a/.github/workflows/octkittest.yml
+++ b/.github/workflows/octkittest.yml
@@ -40,5 +40,6 @@ jobs:
     - run: "echo latest release: '${{ fromJson(steps.get_adm_issue_status.outputs.data)[0].state }}'"
     - run: |
             echo "Run Jenkins job and wait for two hours "
-            SUMMARY=$"# Job Summary\n## Jenkins job and wait for two hours for completion ${{ fromJson(steps.get_adm_issue_status.outputs.data)[0].state }}  \nsuccessful"
+            
+            SUMMARY=$'# Job Summary\n## Jenkins job and wait for two hours for completion  \nsuccessful \n ### Release completed successfully! 🚀'
             echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
