--- a/.github/workflows/octkittest.yml
+++ b/.github/workflows/octkittest.yml
@@ -34,7 +34,7 @@ jobs:
         GITHUB_TOKEN: ${{ SECRETS.GIT_PER_TOKEN }}
         
     - name: "Check if the ADM team approved the release"
-      if: "${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state}} == 'open'}}"
+      if:  ${{fromJson(steps.get_adm_issue_status.outputs.data)[0].state == 'closed'}} 
       run: |
         exit 1 
     - run: "echo latest release: '${{ steps.get_adm_issue_status.outputs.data }}'"
