--- a/.github/workflows/ondemandrelease-workflow.yml
+++ b/.github/workflows/ondemandrelease-workflow.yml
@@ -77,4 +77,4 @@ jobs:
         run: |
             echo "summary created"
             SUMMARY=$'# Job Summary\n## Two GitHub workitem are created  \nsuccessful \n '
-            echo "$SUMMARY ${{ steps.compliancewkitem.outputs.html_url }} \n ${{ steps.releaseEnggwkitem.outputs.html_url }}  " >> $GITHUB_STEP_SUMMARY
+            echo "$SUMMARY Compliance team need to Approve this ${{ steps.compliancewkitem.outputs.html_url }} ---------- Release engineer to start the release ${{ steps.releaseEnggwkitem.outputs.html_url }}  " >> $GITHUB_STEP_SUMMARY
