--- a/.github/workflows/implement-release.yml
+++ b/.github/workflows/implement-release.yml
@@ -52,21 +52,31 @@ jobs:
         run: |
           echo "Run Jenkins job and wait for two hours "
   RunDeploy-job2:
-      needs: RunDeploy-job1
+      needs: pre-implementation-job
       runs-on: [ubuntu-org,ubuntu-org4]
       steps:
       - name: "Jenkins deployment Job2"
         run: |
           echo "Run Jenkins job and wait for two hours "
           SUMMARY=$'# Job Summary\n## Jenkins job and wait for two hours for completion  \nsuccessful \n'
-          echo "$SUMMARY ${{ needs.pre-implementation-job.outputs.issue_labels }} Deplpoyment completed successfully! 🚀 " >> $GITHUB_STEP_SUMMARY
-      - name: "create an workitem for App Release engineer team to validate the deployment"
-        uses: dacbd/create-issue-action@main
-        with:
-          token: ${{ SECRETS.GIT_PER_TOKEN }}
-          title: New Release-<GEAR_ID>- ${{ github.event.inputs.ReleaseNo }}
-          body:  |
-            # Body
-            Please close the issue once you validate the deployment
-          assignees: imurpalvicky
-          labels: ${{ needs.pre-implementation-job.outputs.issue_labels }}
+          echo "$SUMMARY Deplpoyment completed successfully! 🚀 " >> $GITHUB_STEP_SUMMARY
+  validationworkitem-creation:
+        needs: [RunDeploy-job2,pre-implementation-job]
+        runs-on: [ubuntu-org,ubuntu-org4]
+        steps:
+          - name: "create an workitem for App Release engineer team to validate the deployment"
+            id: "validationworkitemid"
+            uses: dacbd/create-issue-action@main
+            with:
+              token: ${{ SECRETS.GIT_PER_TOKEN }}
+              title: New Release-<GEAR_ID>- ${{ github.event.inputs.ReleaseNo }}
+              body:  |
+                # Body
+                Please close the issue once you validate the deployment
+              assignees: imurpalvicky
+              labels: ${{ needs.pre-implementation-job.outputs.issue_labels }}
+          - run: |
+              echo "Run Jenkins job and wait for two hours "
+              SUMMARY=$'# Job Summary\n## Jenkins job and wait for two hours for completion  \nsuccessful \n'
+              echo "$SUMMARY ----- validation and approve the workitem ${{ steps.validationworkitemid.outputs.html_url }}  ------- Deplpoyment completed successfully! 🚀 " >> $GITHUB_STEP_SUMMARY
+        
